[package]
name = "ping_pong_multiplayer"
version = "0.1.0"
edition = "2018"
[dependencies]
prost = "^0.8.0"
tonic = "^0.5.2"
tetra = "^0.6.5"
tokio = { version = "^1.12.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"

[build-dependencies]
tonic-build = "^0.5.2"
#server binary
[[bin]]
name = "server"
path = "src/server.rs"
#client binary
[[bin]]
name = "client"
path = "src/client.rs"